# Sysex77

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  Historique.rtf  LICENSE  MAP.md  README.md  ROADMAP.md  SY77_PARAMETERS.md  Sysex77.jucer  build.bat  build.sh  release.sh
.claude/agents/: architecte.md  midi-specialist.md  sysex-specialist.md  ui-specialist.md
.claude/skills/build-test/: SKILL.md
.claude/skills/release/: SKILL.md
Binary/Sysex77 osx1012.app/Contents/: Info.plist
Binary/Sysex77 osx1012.app/Contents/MacOS/: MidiDemo  Sysex77
Binary/Sysex77 osx1012.app/Contents/Resources/: French.txt  Icon.icns  TableData.xml
Binary/Sysex77 osx107.app/Contents/: Info.plist
Binary/Sysex77 osx107.app/Contents/MacOS/: MidiDemo
Binary/Sysex77 osx107.app/Contents/Resources/: Librairie.xml
Binary/Sysex77.app/Contents/: Info.plist
Binary/Sysex77.app/Contents/MacOS/: MidiDemo  Sysex77
Ressources/: French.txt  SY77Waves.xml  SY99Waves.xml  Sysex77.afdesign  icon.afdesign
Source/: ADSR.h  AWMVue.h  AfmLfo.h  AfmVue.h  AlgoDraw.h  AlgoEditor.h  AlgoModel.h  AppSettings.h  BankReceiveProgress.h  BankSendProgress.h  BankTableModel.h  CommonFilter.h  Config.h  Constructeur.h  Controller.h  Declarations.h  DumpDiffView.h  Effects.h  Element.h  EnvelopeDraw.h  Filter1.h  Filter2.h  FilterVue copie.h  FilterVue.h  Hook.h  Librairie.h  LibraryIndex.h  LookAndFeel.h  Main.cpp  MidiDemo.h  MidiObjects.h  MidiSysex.h  Operator.h  Oscillator.h  Pan.h  PanEg.h  PanVue.h  Pitch.h  PitchEG.h  Redraw.h  (+18 more)
tools/: gen_param_table.py  reconcile_audit.py
